platform/multi-tenancy/base/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    app.kubernetes.io/part-of: multi-tenancy
    tenant-environment: prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    openshift.io/description: "Self-service production tenant namespace"
    openshift.io/display-name: "Prod"
